--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -11,8 +11,17 @@ author_profile: true
 
 {% endif %}
 
-{% assign sorted_talks = site.talks | sort: "type"%}
+{% assign sorted_talks = site.talks | sort: "type" %}
 
+{% assign current_type = "" %}
+{% assign grouped_talks = "" %}
 {% for post in sorted_talks %}
-  {% include archive-single-talk.html %}
+  {% if post.type != current_type %}
+    {% assign current_type = post.type %}
+    <h2>{{ current_type }}</h2>
+    {% assign grouped_talks = site.talks | where: "type", current_type | sort: "date" %}
+    {% for grouped_post in grouped_talks %}
+      {% include archive-single-talk.html post=grouped_post %}
+    {% endfor %}
+  {% endif %}
 {% endfor %}
