--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -18,8 +18,7 @@ author_profile: true
 {% for post in sorted_talks %}
   {% if post.type != current_type %}
     {% assign current_type = post.type %}
-    <h2>{{ current_type }}</h2>
-    {% assign grouped_talks = site.talks | where: "type", current_type | sort: "date" %}
+    {% assign grouped_talks = site.talks | where: "type", current_type | sort: "date" | reverse %}
     {% for grouped_post in grouped_talks %}
       {% include archive-single-talk.html post=grouped_post %}
     {% endfor %}
