--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -20,7 +20,7 @@ author_profile: true
         {% continue %}
       {% endif %}
       {% unless title_shown %}
-        <h3>{{ category[1].title }}</h3>
+        <h2 style="margin-bottom: 0.5rem;">{{ category[1].title }}</h2>
         {% assign title_shown = true %}
       {% endunless %}
       {% include archive-single.html %}
