--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -20,7 +20,7 @@ author_profile: true
         {% continue %}
       {% endif %}
       {% unless title_shown %}
-        <h2 style="margin-bottom: 0.1rem;">{{ category[1].title }}</h2>
+        <h2 style="margin-bottom: 0.1rem; padding: 0; line-height: 1.2;">{{ category[1].title }}</h2>
         {% assign title_shown = true %}
       {% endunless %}
       {% include archive-single.html %}
